--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hamburger Game</title>
+  <title>Running Hamburger Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
       background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
     }
     canvas {
-      border: 1px solid #000;
+      display: block;
+      margin: 0 auto;
     }
-    #score, #level, #rewards {
+    #score, #level {
+      text-align: center;
       font-size: 24px;
       font-weight: bold;
       margin: 10px 0;
@@ -19,12 +22,11 @@
   </style>
 </head>
 <body>
-  <h1>Hamburger Game</h1>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <h1>Running Hamburger Game</h1>
+  <canvas id="gameCanvas" width="360" height="640"></canvas>
   <div>
     <p id="score">Score: 0</p>
     <p id="level">Level: 1</p>
-    <p id="rewards"></p>
   </div>
 
   <script>
@@ -32,7 +34,7 @@
     const ctx = canvas.getContext('2d');
 
     let player = {
-      x: 50,
+      x: canvas.width / 2,
       y: canvas.height - 50,
       width: 50,
       height: 50,
@@ -42,8 +44,6 @@
     let hamburgers = [];
     let score = 0;
     let level = 1;
-    let rewardThresholds = [1000, 1500, 2000, 4000];
-    let rewardsEarned = [];
 
     function drawPlayer() {
       ctx.fillRect(player.x, player.y, player.width, player.height);
@@ -56,7 +56,7 @@
     }
 
     function updateGame() {
-      // Move player
+      // Move player left/right
       if (keys.ArrowLeft && player.x > 0) {
         player.x -= player.speed;
       }
@@ -89,42 +89,16 @@
         ) {
           hamburgers.splice(index, 1);
           score += 100;
-          updateRewards();
+          if (score >= level * 300) {
+            level++;
+            player.speed += 1;
+          }
         }
       });
-
-      // Update level
-      if (score >= level * 300) {
-        level++;
-        player.speed += 1;
-      }
 
       // Update UI
       document.getElementById('score').textContent = `Score: ${score}`;
       document.getElementById('level').textContent = `Level: ${level}`;
-      document.getElementById('rewards').textContent = rewardsEarned.join(', ');
-    }
-
-    function updateRewards() {
-      while (score >= rewardThresholds[0]) {
-        const reward = rewardThresholds.shift();
-        let rewardText = '';
-        switch (reward) {
-          case 1000:
-            rewardText = 'Soda';
-            break;
-          case 1500:
-            rewardText = 'Fries';
-            break;
-          case 2000:
-            rewardText = '10% Discount';
-            break;
-          case 4000:
-            rewardText = 'Hamburger/Sandwich';
-            break;
-        }
-        rewardsEarned.push(rewardText);
-      }
     }
 
     let keys = {};
