--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <div id="score">🍔 0</div>
+    <div id="level">Nivel = 1</div>
     <div class="game-over" id="gameOver">
         <h2>¡Juego Terminado!</h2>
         <p>Hamburguesas recolectadas: <span id="finalScore">0</span></p>
