--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Plate Runner</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -10,11 +10,19 @@
     <canvas id="gameCanvas"></canvas>
     <div id="score">🍔 0</div>
     <div id="level">Nivel = 1</div>
+    <div id="startScreen">
+        <button id="startButton">JUGAR CON THIAGO BURGER</button>
+    </div>
     <div class="game-over" id="gameOver">
         <h2>¡Juego Terminado!</h2>
         <p>Hamburguesas recolectadas: <span id="finalScore">0</span></p>
         <button id="restartButton">Jugar de nuevo</button>
     </div>
+    <div id="detailsButton">
+        <button id="showDetails">🕒 Detalles del último juego</button>
+        <div id="gameDetails" style="display: none;"></div>
+    </div>
+    <audio id="gameMusic" src="audio1.mp3" loop></audio>
     <script src="script.js"></script>
 </body>
 </html>
