--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="showDetails">🕒 Detalles del último juego</button>
         <div id="gameDetails" style="display: none;"></div>
     </div>
-    <audio id="gameMusic" src="audio1.mp3" loop></audio>
+    <audio id="gameMusic" src="juego.mp3" loop></audio>
     <script src="script.js"></script>
 </body>
 </html>
