--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- Música de fondo -->
-    <audio id="gameMusic" src="juego.mp3" loop></audio>
+    <audio id="gameMusic" src="audio1.mp3" loop></audio>
 
     <!-- Script del juego -->
     <script src="script.js"></script>
