--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <div id="score">🍔 0</div>
     <div id="level">Nivel = 1</div>
     <div id="startScreen">
+        <div id="rewardsInfo">
+            <h2>Premios por puntos:</h2>
+            <ul>
+                <li><strong>400 puntos:</strong> 🌟 Premio nivel 1</li>
+                <li><strong>800 puntos:</strong> 🏅 Premio nivel 2</li>
+                <li><strong>1200 puntos:</strong> 🏆 Premio nivel 3</li>
+                <li><strong>1600 puntos:</strong> 🎉 Premio nivel 4</li>
+            </ul>
+        </div>
         <button id="startButton">JUGAR CON THIAGO BURGER</button>
     </div>
     <div class="game-over" id="gameOver">
