--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <div id="rewardsInfo">
             <h2>Premios por puntos:</h2>
             <ul>
-                <li><strong>400 puntos:</strong> 🌟 Premio nivel 1</li>
-                <li><strong>800 puntos:</strong> 🏅 Premio nivel 2</li>
-                <li><strong>1200 puntos:</strong> 🏆 Premio nivel 3</li>
-                <li><strong>1600 puntos:</strong> 🎉 Premio nivel 4</li>
+            
+                <li><strong>800 puntos:</strong> 🏅 Premio Vaso Refresco</li>
+                <li><strong>1500 puntos:</strong> 🏆 Premio Porcion de Papas</li>
+                <li><strong>2000 puntos:</strong> 🎉 Premio 10% Descuento</li>
+                <li><strong>3000 puntos:</strong> 🎉 Premio PlatoSorpresa</li>
             </ul>
         </div>
         <button id="startButton">JUGAR CON THIAGO BURGER</button>
